Create more classes for TP3